# iea-cohort-08

./: .gitignore  .testfile.swp  README.md  dailyupdate.sh  demofile  demofile22  factor.py  gcp_lab_machine_creds.ods  hotfixfile1  nøkkel  sys
02_linux_bash_scripting/: fileCheck.sh  first  foobar  linux_and_bash-AC.ipynb  linux_and_bash-NL.ipynb  linux_and_bash-as.ipynb  linux_and_bash-kl.ipynb  linux_and_bash-nwat.ipynb  linux_and_bash.ipynb  new_linux_and_bash-jrr.ipynb  notes.ipynb  poem  poem.nospace  religion3.txt  words
03_mastering_git/: git_workflow.txt
04_intro_to_programming/: Introduction to Programming - Curtis.ipynb  Introduction to Programming - KL.ipynb  Introduction to Programming-CA.ipynb  Introduction to Programming-Copy1.ipynb  Introduction to Programming-jrr.ipynb  Introduction to Programming.ipynb  check_prime.py  even_number.py  factorial.py  find_prime.py  five_characters.py  geolocate.py  guessing_game.py  jr_primetest.py  jumble_lab.py  leap.py  list_lab.py  list_lab2.py  list_lab3.py  list_lab4.py  list_lab5.py  pass_gen.py  prime_play.py  repeat_letters.py  roman_dictionary.py  roman_to_decimal.py  running_total.py  star_wars_words.txt  starwars_8k_2018.txt  times_table.py
05_python_for_devops/: 01 Introduction - Python for DevOps - Curtis.ipynb  01 Introduction - Python for DevOps-NL.ipynb  01 Introduction - Python for DevOps-jrr.ipynb  02 More Python for DevOps - Curtis.ipynb  02 More Python for DevOps-KL.ipynb  02 More Python for DevOps-NL.ipynb  02 More Python for DevOps-jrr.ipynb  (+40 more)
05_python_for_devops/session2_lab/: pyproject.toml
(+114 files in other folders)
